--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
     <head>
-    <script src="final.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@v1.5.0/lib/addons/p5.sound.min.js" type="text/javascript"></script>
+    <script src="final.js" type="text/javascript"></script><script src="https://cdn.jsdelivr.net/npm/p5@1.5.0/lib/p5.js" type="text/javascript"></script><script src="https://cdn.jsdelivr.net/npm/p5@v1.5.0/lib/addons/p5.sound.min.js" type="text/javascript"></script>
     </head>
 <body>
 </body>
